2013-09-05 23:50 Yao Liu <xuanyao0111@gmail.com>
-Create this project
-Create app-1 named mapper, continue to finish it.
 import net package which is implement by our group.
 create a class named Mapper(need to finish)
