@@ -4,3 +4,8 @@
  import net package which is implement by our group.
  create a class named Mapper(need to finish)
 
+2013-09-06 22:35 Yao Liu <xuanyao0111@gmail.com>
+-Add functions in class Mapper
+ Class mapper has not been finished
+
+
